--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,7 @@ html {
   box-sizing: border-box;
   max-width: 1000px;
   margin: 0 auto;
+  font-family: 'Open Sans', sans-serif;
+  word-break: break-word;
 }
 
