--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -24,7 +24,8 @@
     background-color: hsl(180, 100%, 25%);
     color: hsl(0, 0%, 100%);
     padding: 5px;
-    border: 1px solid hsl(0, 0%, 0%);
+    border: none;
+    cursor: pointer;
 }
 
 .form__button:hover {
