--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@ html {
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
   word-break: break-word;
+  background-color: hsl(0, 0%, 93%);
 }
